--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+    background-color: rgb(232, 221, 248);
+}
+
 p { 
     font-size: 16px; 
 } 
@@ -12,7 +16,7 @@ h2,h3{
 } 
 
 .skill { 
-    background-color: blue; 
+    /* background-color: blue;  */
     color: white; 
     padding: 1%; 
     text-align: right; 
@@ -26,10 +30,13 @@ h2,h3{
 
 .progress1 { 
     width: 80%; 
+    background-color: blue; 
 } 
 .progress2 { 
     width: 65%; 
+    background-color: rgb(243, 200, 9); 
 } 
 .progress3 { 
     width: 70%; 
+    background-color: rgb(255, 0, 0); 
 } 
