--- a/style.css
+++ b/style.css
@@ -40,3 +40,7 @@ h2,h3{
     width: 70%; 
     background-color: rgb(255, 0, 0); 
 } 
+.progress4 { 
+    width: 70%; 
+    background-color: rgb(24, 253, 3); 
+} 
