--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 html{
     background-color: rgb(232, 221, 248);
+    /* background-color: rgb(0, 0, 0); */
 }
 
 p { 
     font-size: 16px; 
+    margin-top: 30px;
 } 
 h2,h3{
     text-align: center;
@@ -25,7 +27,7 @@ h2,h3{
 } 
 
 .middle{
-    margin-left: 15px;
+    margin-left: 110px;
 }
 
 .progress1 { 
